# A-Ray

./: .gitmodules  A-Ray.sln  CMakeLists.txt  README.md
A-Ray/: A-Ray.cpp  A-Ray.h  A-Ray.vcxproj  A-Ray.vcxproj.filters  CMakeLists.txt  imgui.ini  shapes.cpp  shapes.h
A-Ray/include/: vk_types.h
A-Ray/include/Renderers/: base_renderer.h  clustered_forward_renderer.cpp  clustered_forward_renderer.h  ground_truth_renderer.cpp  ground_truth_renderer.h
A-Ray/shaders/: ray_tracing.comp  shapes.glsl  vertex_data.glsl
A-Ray/src/: shapes.cpp  shapes.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_types.h
assets/shaders/: gradient.comp  gradient.spv
test/: A-Ray.sln  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  TracyTargets.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
test/A-Ray/: A-Ray.vcxproj  A-Ray.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
